--- a/src/App.css
+++ b/src/App.css
@@ -90,3 +90,10 @@ button {
   outline: none;
   background-color: #363636;
 }
+
+.layout {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-items: center;
+}
